not sure how to do this project so I creating a box

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 
+.sketchContainer {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.boxes {
+border-color: lightblue;
+height: 100x;
+width: 100px;
+
+
+}
