--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,63 @@
 
+body {
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 45px;
+    font-weight: bold;
+    color: black;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding-bottom: 0px;
+}
+
+h3 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 17px;
+    font-weight: 200px;
+    color: rgb(15, 42, 244);
+    justify-content: center;
+    align-items: center;
+    padding-top: 0px;
+    padding-bottom: 20px;
+    margin: 0;
+}
+
+input {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+label {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    font-weight:bolder;
+}
+
+button {
+    margin: 0;
+    height: 25px;
+    width: 50px;
+    
+}
+
+
 .sketchContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* height: 1000px;
+    width: 1000px; */
+    margin: 0;
+ 
+   
+} 
 
-}
-
-.boxes {
-border-color: lightblue;
-height: 100x;
-width: 100px;
-
-
-}
