--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,31 @@
+/* Grid Design */
 
+* {
+    box-sizing: border-box;
+}
+
+.sketchContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.sketchContainer>div {
+    border: 1px solid black;
+    height: 25px;
+    width: 25px;
+}
+
+.sketchContainer>div:nth-child(16n + 1) {
+    width: 100% !important;
+    border: 0;
+    height: 0;
+}
+
+/* 
 body {
     justify-content: center;
     align-items: center;
-}
+} */
 
 h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -49,15 +72,7 @@ button {
 }
 
 
-.sketchContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* height: 1000px;
-    width: 1000px; */
-    margin: 0;
- 
-   
-} 
+
+
+
 
