--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,17 @@ button {
 }
 
 
-
+/* .sketchContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 1000px;
+    width: 1000px;
+    margin: 0;
+ 
+   
+}  */
 
 
 
