--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,16 @@
 .sketchContainer {
     display: flex;
     flex-wrap: wrap;
+    width: 400px;
 }
 
-.sketchContainer>div {
+.sketchContainer > div {
     border: 1px solid black;
     height: 25px;
     width: 25px;
+    /* flex-basis: 25px; */
+    box-sizing: border-box;
+
 }
 
 .sketchContainer>div:nth-child(16n + 1) {
