--- a/styles.css
+++ b/styles.css
@@ -4,32 +4,38 @@
     box-sizing: border-box;
 }
 
+
 .sketchContainer {
     display: flex;
     flex-wrap: wrap;
     width: 400px;
 }
 
-.sketchContainer > div {
+/* .sketchContainer > div {
     border: 1px solid black;
     height: 25px;
     width: 25px;
-    /* flex-basis: 25px; */
+    flex-basis: 25px;
     box-sizing: border-box;
 
+} */
+
+.sketchContainer .cell {
+    border: 1px solid black;
+    height: 25px;
+    width: 25px;
+    box-sizing: border-box;
 }
 
-.sketchContainer>div:nth-child(16n + 1) {
+/* .sketchContainer>div:nth-child(16n + 1) {
     width: 100% !important;
     border: 0;
     height: 0;
-}
-
-/* 
-body {
-    justify-content: center;
-    align-items: center;
 } */
+
+
+
+
 
 h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -76,17 +82,6 @@ button {
 }
 
 
-/* .sketchContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 1000px;
-    width: 1000px;
-    margin: 0;
- 
-   
-}  */
 
 
 
