--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,52 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
+}
+
+h1, h3 {
+    margin-bottom: 15px; /* Adds some space between the elements */
+    text-align: center;
+  }
+  
+  .form-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+  }
+  
+  label {
+    margin-right: 10px; /* Add space between label and input */
+  }
+  
+  input {
+    margin-right: 10px; /* Add space between input and button */
+  }
+  
+  button {
+    padding: 2px 2px;
+    font-size: 16px;
+  }
 
 
 .sketchContainer {
-    display: flex;
-    flex-wrap: wrap;
-    width: 400px;
+    display: grid;
+    /* justify-content: center; */
+    /* flex-wrap: wrap; */
+    gap: 1px;
+    width: 500px;
+    height: 500px;
+    margin-top: 20px;
 }
 
 /* .sketchContainer > div {
@@ -22,9 +61,9 @@
 
 .sketchContainer .cell {
     border: 1px solid black;
-    height: 25px;
-    width: 25px;
-    box-sizing: border-box;
+    /* height: 100%;
+    width: 100%; */
+    /* box-sizing: border-box; */
 }
 
 /* .sketchContainer>div:nth-child(16n + 1) {
