--- a/styles.css
+++ b/styles.css
@@ -39,40 +39,39 @@ h1, h3 {
     font-size: 16px;
   }
 
+  .sketchColor {
+    display: inline;
+    align-items: center;
+    
+    
+  }
+
+  .blkbtn {
+    margin-right: 50px;
+    
+  }
+
+  .colorbtn {
+    margin-bottom: 35px;
+    margin-left: 100px;
+  }
+
 
 .sketchContainer {
     display: grid;
-    /* justify-content: center; */
-    /* flex-wrap: wrap; */
+    border-color: black;
+    border-style: solid;
     gap: 1px;
-    width: 500px;
-    height: 500px;
+    width: 800px;
+    height: 800px;
     margin-top: 20px;
 }
 
-/* .sketchContainer > div {
-    border: 1px solid black;
-    height: 25px;
-    width: 25px;
-    flex-basis: 25px;
-    box-sizing: border-box;
-
-} */
 
 .sketchContainer .cell {
     border: 1px solid black;
-    /* height: 100%;
-    width: 100%; */
-    /* box-sizing: border-box; */
+   
 }
-
-/* .sketchContainer>div:nth-child(16n + 1) {
-    width: 100% !important;
-    border: 0;
-    height: 0;
-} */
-
-
 
 
 
@@ -113,12 +112,12 @@ label {
     font-weight:bolder;
 }
 
-button {
+/* button {
     margin: 0;
     height: 25px;
     width: 50px;
     
-}
+} */
 
 
 
