working on eventlisters to sketch on canvas

--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,12 @@ h1, h3 {
     
   }
 
-  .blkbtn {
+  .blkBtn {
     margin-right: 50px;
     
   }
 
-  .colorbtn {
+  .colorBtn {
     margin-bottom: 35px;
     margin-left: 100px;
   }
